  org.jminor.common, inlined a few Objects.requireNonNull() calls
  Unnecessary logback core and or classic dependencies removed from some modules
  Explicit logback core and classic dependencies added to framework modules
  States, state no longer fires change event on a call to setActive() if the actual state does not change
  SwingEntityEditModel, bug fixed, add- and removeForeignKeyValues() created unnecessary combobox models
  AbstractServer, getConnection() fixed, did not fulfill doc contract
  DefaultEntityConnectionServer, minor optimization based on the above change
  DefaultRemoteEntityConnection, removed unnecessary call to isConnected() during disconnect
  States.DefaultGroup, minor refactoring removing unnecessary array creation
  EntityEditPanel, overloaded createEditPanelAction() with EntitiesInsertedListener callback, some refactoring involved
0.10.6
  Conjunction, Version and User moved from common.model to common
  Major renaming, all things Criteria are now Condition
  SearchType renamed to ConditionType and moved to common.db.condition
  org.jminor.common refactored, now model depends on db not the other way around
  EntityConditions.DefaultEntitySelectCondition, removed version compatability hack
  FilteredComboBoxModel interface removed, had a single implementation
  Most of org.jminor.common.model.valuemap moved to org.jminor.common.db.valuemap
  FilteredComboBoxModel reintroduced, too quick on the delete trigger
  ConditionType is now Condition.Type
  ConditionSet is now Condition.Set
0.10.7
  PropertyConditionModelProvider refactored to get rid of wildcard return type
  Sonar run
  Property.SearchableProperty removed
  FilteredComboBoxModel.setContents(), removed a couple of wildcard types
  Item is now final
  EntityTableConditionModel.setConditionValues() removed wildcard type
  MasterDetailPanel.getDetailPanels() removed wildcard type
  Floating point comparison now done with Double.compare()