@@ -4,6 +4,7 @@
 package org.jminor.common.db.condition;
 
 import org.jminor.common.Conjunction;
+import org.jminor.common.db.Column;
 
 import org.junit.Test;
 
@@ -12,6 +13,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
+import java.io.Serializable;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
@@ -21,9 +23,9 @@ import static org.junit.Assert.assertEquals;
 public final class ConditionsTest {
 
   private static final Condition.Set AND_SET = Conditions.conditionSet(Conjunction.AND, new TestCondition(), new TestCondition());
-  private static final Condition.Set<Object> OR_SET = Conditions.conditionSet(Conjunction.OR, new TestCondition(), new TestCondition());
-  private static final Condition.Set<Object> AND_OR_AND_SET = Conditions.conditionSet(Conjunction.AND, AND_SET, OR_SET);
-  private static final Condition.Set<Object> AND_OR_OR_SET = Conditions.conditionSet(Conjunction.OR, AND_SET, OR_SET);
+  private static final Condition.Set<TestColumn> OR_SET = Conditions.conditionSet(Conjunction.OR, new TestCondition(), new TestCondition());
+  private static final Condition.Set<TestColumn> AND_OR_AND_SET = Conditions.conditionSet(Conjunction.AND, AND_SET, OR_SET);
+  private static final Condition.Set<TestColumn> AND_OR_OR_SET = Conditions.conditionSet(Conjunction.OR, AND_SET, OR_SET);
 
   @Test
   public void andSet() {
@@ -35,7 +37,7 @@ public final class ConditionsTest {
   public void orSet() {
     assertEquals("OR condition set should be working", "(condition or condition)", OR_SET.getWhereClause());
     assertEquals(2, OR_SET.getValues().size());
-    assertEquals(2, OR_SET.getValueKeys().size());
+    assertEquals(2, OR_SET.getColumns().size());
   }
 
   @Test
@@ -50,7 +52,7 @@ public final class ConditionsTest {
 
   @Test
   public void getConditionCount() {
-    Condition.Set<Object> set = Conditions.conditionSet(Conjunction.OR);
+    Condition.Set<TestColumn> set = Conditions.conditionSet(Conjunction.OR);
     assertEquals(0, set.getConditionCount());
     assertEquals("", set.getWhereClause());
 
@@ -64,18 +66,19 @@ public final class ConditionsTest {
   @Test
   public void stringConditionWithoutValue() {
     final String crit = "id = 1";
-    final Condition<Object> condition = Conditions.stringCondition(crit);
+    final Condition<TestColumn> condition = Conditions.stringCondition(crit);
     assertEquals(crit, condition.getWhereClause());
-    assertEquals(0, condition.getValueKeys().size());
+    assertEquals(0, condition.getColumns().size());
     assertEquals(0, condition.getValues().size());
   }
 
   @Test
   public void stringConditionWithValue() {
+    final TestColumn testColumn = new TestColumn();
     final String crit = "id = ?";
-    final Condition condition = Conditions.stringCondition(crit, Collections.singletonList(1), Collections.singletonList("id"));
+    final Condition condition = Conditions.stringCondition(crit, Collections.singletonList(1), Collections.singletonList(testColumn));
     assertEquals(crit, condition.getWhereClause());
-    assertEquals(1, condition.getValueKeys().size());
+    assertEquals(1, condition.getColumns().size());
     assertEquals(1, condition.getValues().size());
   }
 
@@ -86,7 +89,7 @@ public final class ConditionsTest {
 
   @Test (expected = NullPointerException.class)
   public void stringConditionNullValues() {
-    Conditions.stringCondition("some is null", null, Collections.<String>emptyList());
+    Conditions.stringCondition("some is null", null, Collections.<TestColumn>emptyList());
   }
 
   @Test (expected = NullPointerException.class)
@@ -96,9 +99,11 @@ public final class ConditionsTest {
 
   @Test
   public void serialization() throws IOException, ClassNotFoundException {
-    final Condition<Integer> condition = Conditions.conditionSet(Conjunction.AND,
-            Conditions.stringCondition("test", Arrays.asList("val1", "val2"), Arrays.asList(1, 2)),
-            Conditions.stringCondition("testing", Arrays.asList("val1", "val2"), Arrays.asList(1, 2)));
+    final TestColumn testColumn1 = new TestColumn();
+    final TestColumn testColumn2 = new TestColumn();
+    final Condition<TestColumn> condition = Conditions.conditionSet(Conjunction.AND,
+            Conditions.stringCondition("test", Arrays.asList("val1", "val2"), Arrays.asList(testColumn1, testColumn2)),
+            Conditions.stringCondition("testing", Arrays.asList("val1", "val2"), Arrays.asList(testColumn1, testColumn2)));
     deserialize(serialize(condition));
   }
 
@@ -114,7 +119,8 @@ public final class ConditionsTest {
     return new ObjectInputStream(new ByteArrayInputStream(data)).readObject();
   }
 
-  private static class TestCondition implements Condition {
+  private static class TestCondition implements Condition<TestColumn> {
+    private final TestColumn testColumn = new TestColumn();
     @Override
     public String getWhereClause() {
       return "condition";
@@ -126,8 +132,25 @@ public final class ConditionsTest {
     }
 
     @Override
-    public List<?> getValueKeys() {
-      return Collections.singletonList("key");
+    public List<TestColumn> getColumns() {
+      return Collections.singletonList(testColumn);
     }
   }
+
+  private static final class TestColumn implements Column, Serializable {
+    @Override
+    public String getColumnName() {return null;}
+    @Override
+    public int getType() {return 0;}
+    @Override
+    public boolean isUpdatable() {return false;}
+    @Override
+    public boolean isSearchable() {return false;}
+    @Override
+    public String getCaption() {return null;}
+    @Override
+    public String getDescription() {return null;}
+    @Override
+    public Class<?> getTypeClass() {return null;}
+  };
 }
